Added jvm and jmx settings